--- a/ls13_list-columns.Rmd
+++ b/ls13_list-columns.Rmd
@@ -1,5 +1,6 @@
 ---
 title: "List columns"
+comment: "*creating, managing, and eliminating list-columns*"
 output:
   html_document:
     toc: true
@@ -100,69 +101,238 @@ tb %>%
 
 ## JSON from an API and Game of Thrones
 
+### Load packages
+
+```{r}
+library(repurrrsive)
+library(tidyverse)
+library(httr)
+library(stringr)
+library(here)
+```
+
+### Call the API of Ice and Fire
+
+Here's a simplified version of how we obtained the data on the Game of Thrones POV characters. This data appears as a more processed list in the [repurrrsive](https://github.com/jennybc/repurrrsive#readme) package.
+
+  * Get character IDs from repurrrsive. *cheating a little, humor me*
+  * Put IDs and character names in a tibble.
+
+```{r}
+pov <- set_names(map_int(got_chars, "id"),
+                 map_chr(got_chars, "name"))
+tail(pov, 5)
+ice <- pov %>%
+  enframe(value = "id")
+ice
+```
+
+Request info for each character and store what comes back -- whatever that may be -- in the list-column `stuff`.
+
+```{r}
+ice_and_fire_url <- "https://anapioficeandfire.com/"
+if (file.exists(here("talks", "ice.rds"))) {
+  ice <- readRDS(here("talks", "ice.rds"))
+} else {
+  ice <- ice %>%
+    mutate(
+      response = map(id,
+                     ~ GET(ice_and_fire_url,
+                           path = c("api", "characters", .x))),
+      stuff = map(response, ~ content(.x, as = "parsed",
+                                      simplifyVector = TRUE))
+    ) %>%
+    select(-id, -response)
+  saveRDS(ice, here("talks", "ice.rds"))
+}
+ice
+```
+
+Let's switch to a nicer version of `ice`, based on the list in repurrrsive, because it already has books and houses replaced with names instead of URLs.
+
+```{r}
+ice2 <- tibble(
+  name = map_chr(got_chars, "name"),
+  stuff = got_chars
+)
+ice2
+```
+
+Inspect the list-column.
+```{r}
+str(ice2$stuff[[9]], max.level = 1)
+# if (interactive()) {
+#   listviewer::jsonedit(ice2$stuff[[2]], mode = "view", width = 500, height = 530)
+# }
+```
+
+### Use regular data manipulation toolkit
+
+Form a sentence of the form "NAME was born AT THIS TIME, IN THIS PLACE" by digging info out of the `stuff` list-column and placing into a string template. No list-columns left!
+
+```{r}
+template <- "${name} was born ${born}."
+birth_announcements <- ice2 %>%
+  mutate(birth = map_chr(stuff, str_interp, string = template)) %>%
+  select(-stuff)
+birth_announcements
+```
+
+Extract each character's house allegiances. Keep only those with more than one allegiance. Then unnest to explode the `houses` list-column and get a tibble with one row per character * house combination. No list-columns left!
+
+```{r}
+allegiances <- ice2 %>%
+  transmute(name,
+            houses = map(stuff, "allegiances")) %>%
+  filter(lengths(houses) > 1) %>%
+  unnest()
+allegiances
+```
+
+## Aliases and allegiances of Game of Thrones characters
+
+### Load packages
+
+```{r}
+library(tidyverse)
+## install_github("jennybc/repurrrsive")
+library(repurrrsive)
+library(stringr)
+```
+
+## Lists as variables in a data frame
+
+One row per GoT character. List columns for aliases and allegiances.
+
+```{r}
+x <- tibble(
+  name = got_chars %>% map_chr("name"),
+  aliases = got_chars %>% map("aliases"),
+  allegiances = got_chars %>% map("allegiances")
+)
+x
+#View(x)
+```
+
+What if we only care about characters with a "Lannister" alliance? Practice operating on a list-column.
+
+```{r}
+x %>%
+  mutate(lannister = map(allegiances, str_detect, pattern = "Lannister"),
+         lannister = map_lgl(lannister, any))
+```
+
+Keep only the Lannisters and Starks allegiances. You can use `filter()` with list-columns, but you will need to `map()` to list-ize your operation. Once I've got the characters I want, I drop `allegiances` and use `unnest()` to get back to a simple data frame with no list columns.
+
+```{r}
+x %>%
+  filter(allegiances %>%
+           map(str_detect, "Lannister|Stark") %>%
+           map_lgl(any)) %>%
+  select(-allegiances) %>%
+  filter(lengths(aliases) > 0) %>%
+  unnest() %>% 
+  print(n = Inf)
+```
+
+```{r eval = FALSE, include = FALSE}
+x_base <- data.frame(
+  name = vapply(got_chars, `[[`, character(1), "name"),
+  aliases = I(lapply(got_chars, `[[`, "aliases")),
+  allegiances = I(lapply(got_chars, `[[`, "allegiances"))
+)
+keep1 <- vapply(x_base$allegiances, function(y) any(grepl("Lannister|Stark", y)), logical(1))
+x_base <- x_base[keep1, ]
+x_base$allegiances <- NULL
+x_base
+data.frame(
+  name = rep(x_base$name, lengths(x_base$aliases)),
+  aliases = unlist(x_base$aliases)
+)
+```
+
 ## Nested data frame, modelling, and Gapminder
 
-
-## Nesting data frames in a list column
-
-*under development ... for now ...*
-
-Head over to [Split-Apply-Combine in STAT 545](http://stat545.com/block024_group-nest-split-map.html)
-
-o4
+Another version of this same example is here:
 
 <http://r4ds.had.co.nz/many-models.html>
 
-<!--
+*mostly code at this point, more words needed*
 
-Remember Gapminder?
+### Load packages
 
 ```{r}
+library(tidyverse)
 library(gapminder)
+library(broom)
+```
+
+### Hello, again, Gapminder
+
+```{r}
 gapminder %>% 
   ggplot(aes(year, lifeExp, group = country)) +
     geom_line(alpha = 1/3)
 ```
 
-Get one meta-row per country
+What if we fit a line to each country?
 
 ```{r}
-by_country <- gapminder %>% 
-  group_by(country, continent) %>% 
-  nest()
-by_country
-by_country$data[[1]]
+gapminder %>%
+  ggplot(aes(year, lifeExp, group = country)) +
+  geom_line(stat = "smooth", method = "lm",
+            alpha = 1/3, se = FALSE, colour = "black")
 ```
 
-Compare contrast to a data frame grouped by country. *Or split on country?*.
+What if you actually want those fits? To access estimates, p-values, etc. In that case, you need to fit them yourself. How to do that?
+
+  * Put the variables needed for country-specific models into nested dataframe. In a **list-column**!
+  * Use the usual "map inside mutate", possibly with the broom package, to pull interesting information out of the 142 fitted linear models.
+  
+### Nested data frame
+  
+Nest the data frames, i.e. get one meta-row per country:
+
+```{r}
+gap_nested <- gapminder %>%
+  group_by(country) %>%
+  nest()
+gap_nested
+gap_nested$data[[1]]
+```
+
+*Compare/contrast to a data frame grouped by country (dplyr-style) or split on country (base)*.
+
+### Fit models, extract results
 
 Fit a model for each country.
 
 ```{r}
-country_model <- function(df) {
-  lm(lifeExp ~ year, data = df)
-}
-models <- map(by_country$data, country_model)
-by_country <- by_country %>% 
-  mutate(model = map(data, country_model))
-by_country
+gap_fits <- gap_nested %>%
+  mutate(fit = map(data, ~ lm(lifeExp ~ year, data = .x)))
 ```
 
-You can still use `filter()`, `arrange()`, etc.
+Look at one fitted model, for concreteness.
 
 ```{r}
-by_country %>% 
-  filter(continent == "Europe")
-by_country %>% 
-  arrange(continent, country)
+gap_fits %>% tail(3)
+canada <- which(gap_fits$country == "Canada")
+summary(gap_fits$fit[[canada]])
 ```
+
+Let's get all the r-squared values!
+
+```{r}
+gap_fits %>%
+  mutate(rsq = map_dbl(fit, ~ summary(.x)[["r.squared"]])) %>%
+  arrange(rsq)
+```
+
+Let's use a function from broom to get the usual coefficient table from `summary.lm()` but in a friendlier form for downstream work.
 
 ```{r}
 library(broom)
-by_country$model[[1]]
-tidy(by_country$model[[1]])
-glance(by_country$model[[1]])
-augment(by_country$model[[1]])
+gap_fits %>%
+  mutate(coef = map(fit, tidy)) %>%
+  unnest(coef)
 ```
-
--->
