--- a/bk01_base-functions.Rmd
+++ b/bk01_base-functions.Rmd
@@ -40,7 +40,8 @@ We load purrr now. Below we also use example lists from [repurrrsive](https://gi
 
 ```{r}
 library(purrr)
-## install_github("jennybc/repurrrsive")
+## install.packages("devtools")
+## devtools::install_github("jennybc/repurrrsive")
 library(repurrrsive)
 ```
 
