--- a/ls08_trump-tweets.Rmd
+++ b/ls08_trump-tweets.Rmd
@@ -77,7 +77,7 @@ tweets <- tweets[c(1, 2, 5, 6, 198, 347, 919)]
 tweets %>% strtrim(70)
 ```
 
-FYI I preselected tweets with 0, 1, 2, and 3 occurences of Trump Android words.
+FYI I preselected tweets with 0, 1, 2, and 3 occurrences of Trump Android words.
 
 ### Are you ready for `gregexpr()`?
 
@@ -146,7 +146,7 @@ Each element of `matches` carries this information in an attribute named `match.
   * Get the attribute named `match.length`. Hint: `attr()`.
   * Drop that approach into `purrr::map()` to scale up to the full `matches` list.
 
-Here's how to do for the last element of `matches`:
+Here's how to do that for the last element of `matches`:
 
 ```{r}
 m <- matches[[7]]
